--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -1,17 +1,19 @@
 {
   "name": "telegram-bot",
   "version": "1.0.0",
+  "description": "Telegram bot using node-telegram-bot-api",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["telegram", "bot", "nodejs"],
+  "author": "Ваше имя",
   "license": "ISC",
-  "type": "commonjs",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
